--- a/package.json
+++ b/package.json
@@ -4,22 +4,39 @@
   "description": "Pax Bonum - Répertoire de chants liturgiques",
   "author": "cedrou",
   "private": true,
-  "scripts": {
-    "start": "concurrently -k \"nodemon ./backend/bin/www\" \"cd frontend && yarn start\""
-  },
   "dependencies": {
-    "concurrently": "^4.1.2",
-    "cookie-parser": "^1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^8.1.0",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1",
-    "nodemon": "^1.19.2",
-    "parse-dashboard": "^2.0.1",
-    "parse-server": "^3.8.0"
+    "parse": "^2.7.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1"
   },
+  "devDependencies": {
+    "concurrently": "^4.1.2",
+    "nodemon": "^1.19.2",
+    "react-scripts": "3.1.1"
+  },
+  "scripts": {
+    "start": "concurrently -k \"nodemon ./backend/bin/www\" \"react-scripts start\"",
+    "build": "react-scripts build && mv build backend",
+    "test": "react-scripts test --env=jsdom"
+  },
+  "proxy": "http://localhost:3001",
   "nodemonConfig": {
-    "watch": ["backend/"],
-    "delay": "2500"
+    "watch": ["backend/"]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
