--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "parse": "^2.7.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-markdown": "^4.2.2",
     "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
@@ -22,7 +23,9 @@
   },
   "proxy": "http://localhost:3001",
   "nodemonConfig": {
-    "watch": ["backend/"]
+    "watch": [
+      "backend/"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
