--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-markdown": "^4.2.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
