Implement static version of ViewSheet

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "cedrou",
   "private": true,
   "dependencies": {
+    "moment": "^2.24.0",
     "parse": "^2.7.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
