--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "paxebonum",
+  "name": "paxebonum-backend",
   "version": "0.0.1",
   "description": "Pax Bonum - Répertoire de chants liturgiques",
   "author": "cedrou",
@@ -8,15 +8,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "jade": "^1.11.0",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
-    "parse-dashboard": "^2.0.1",
-    "parse-server": "^3.8.0"
+    "parse-dashboard": "^2.1.0",
+    "parse-server": "^4.2.0"
   }
 }
