--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "jade": "^1.11.0",
     "morgan": "~1.9.1",
+    "n-readlines": "^1.0.0",
     "node-fetch": "^2.6.0",
     "parse-dashboard": "^2.1.0",
     "parse-server": "^4.2.0"
