--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "cedrou",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./backend/bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -16,8 +16,6 @@
     "jade": "^1.11.0",
     "morgan": "~1.9.1",
     "n-readlines": "^1.0.0",
-    "node-fetch": "^2.6.0",
-    "parse-dashboard": "^2.1.0",
-    "parse-server": "^4.2.0"
+    "node-fetch": "^2.6.0"
   }
 }
