--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "cedrou",
   "private": true,
   "scripts": {
-    "start": "node ./backend/bin/www"
+    "start": "node ./backend/index.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,7 +13,6 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "jade": "^1.11.0",
     "morgan": "~1.9.1",
     "n-readlines": "^1.0.0",
     "node-fetch": "^2.6.0"
