--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,22 +9,30 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "dayjs": "^1.8.26",
-    "parse": "^2.13.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.1.2"
+  },
+  "devDependencies": {
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.3",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "concurrently -k \"nodemon ../backend/index.js\" \"react-scripts start\"",
+    "build": "react-scripts build && rm -rf ../backend/frontend && mv build ../backend/frontend",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:3001",
+  "nodemonConfig": {
+    "watch": [
+      "../backend/"
+    ]
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
